@@ -52,19 +52,19 @@ public abstract class ExpressionNode implements Renderable {
     if (acceptable.isSame(found)) return Optional.empty();
     if (acceptable instanceof Imyhat.ObjectImyhat && found instanceof Imyhat.ObjectImyhat) {
       final List<String> errors = new ArrayList<>();
-      final var acceptableFields =
+      final Map<String, Imyhat> acceptableFields =
           ((Imyhat.ObjectImyhat) acceptable)
               .fields()
               .collect(Collectors.toMap(Map.Entry::getKey, e -> e.getValue().first()));
-      final var foundFields =
+      final Map<String, Imyhat> foundFields =
           ((Imyhat.ObjectImyhat) found)
               .fields()
               .collect(Collectors.toMap(Map.Entry::getKey, e -> e.getValue().first()));
       final Set<String> union = new TreeSet<>(acceptableFields.keySet());
       union.addAll(foundFields.keySet());
-      for (final var field : union) {
-        final var acceptableFieldType = acceptableFields.get(field);
-        final var foundFieldType = foundFields.get(field);
+      for (final String field : union) {
+        final Imyhat acceptableFieldType = acceptableFields.get(field);
+        final Imyhat foundFieldType = foundFields.get(field);
         if (acceptableFieldType == null) {
           errors.add(String.format("extra %s", field));
         } else if (foundFieldType == null) {
@@ -91,15 +91,14 @@ public abstract class ExpressionNode implements Renderable {
           .map(p -> new Pair<>(p.second() ? ("(" + p.first() + ")?") : (p.first() + "?"), false));
     }
     if (acceptable instanceof Imyhat.TupleImyhat && found instanceof Imyhat.TupleImyhat) {
-      final var acceptableElements =
-          ((Imyhat.TupleImyhat) acceptable).inner().collect(Collectors.toList());
-      final var foundElements = ((Imyhat.TupleImyhat) found).inner().collect(Collectors.toList());
+      final List<Imyhat> acceptableElements = ((Imyhat.TupleImyhat) acceptable).inner().toList();
+      final List<Imyhat> foundElements = ((Imyhat.TupleImyhat) found).inner().toList();
       final List<String> errors = new ArrayList<>();
-      for (var index = 0;
+      for (int index = 0;
           index < Math.min(acceptableElements.size(), foundElements.size());
           index++) {
-        final var acceptableFieldType = acceptableElements.get(index);
-        final var foundFieldType = foundElements.get(index);
+        final Imyhat acceptableFieldType = acceptableElements.get(index);
+        final Imyhat foundFieldType = foundElements.get(index);
         errors.add(
             generateRecursiveError(acceptableFieldType, foundFieldType, false)
                 .map(Pair::first)
@@ -117,14 +116,14 @@ public abstract class ExpressionNode implements Renderable {
           : Optional.of(new Pair<>("{ " + String.join(", ", errors) + " }", false));
     }
     if (acceptable instanceof AlgebraicImyhat && found instanceof AlgebraicImyhat) {
-      final var acceptableType = ((AlgebraicImyhat) acceptable);
-      final var foundType = ((AlgebraicImyhat) found);
-      final var errors =
+      final AlgebraicImyhat acceptableType = ((AlgebraicImyhat) acceptable);
+      final AlgebraicImyhat foundType = ((AlgebraicImyhat) found);
+      final List<String> errors =
           foundType
               .members()
               .flatMap(
                   foundName -> {
-                    final var acceptableElement = acceptableType.typeFor(foundName);
+                    final Imyhat acceptableElement = acceptableType.typeFor(foundName);
                     if (acceptableElement.isBad()) {
                       return Stream.of(
                           String.format(
@@ -161,7 +160,8 @@ public abstract class ExpressionNode implements Renderable {
       Imyhat acceptable,
       Imyhat found,
       Consumer<String> errorHandler) {
-    final var recursiveError = generateRecursiveError(acceptable, found, true).map(Pair::first);
+    final Optional<String> recursiveError =
+        generateRecursiveError(acceptable, found, true).map(Pair::first);
     if (recursiveError.isPresent()) {
       errorHandler.accept(
           String.format("%d:%d: Type mismatch%s %s.", line, column, context, recursiveError.get()));
@@ -254,7 +254,7 @@ public abstract class ExpressionNode implements Renderable {
       new Parser.ParseDispatch<>();
 
   static {
-    final var A_RUNTIME_SUPPORT_TYPE = Type.getType(RuntimeSupport.class);
+    final Type A_RUNTIME_SUPPORT_TYPE = Type.getType(RuntimeSupport.class);
 
     INT_SUFFIX.addKeyword("Gi", Parser.just(1024 * 1024 * 1024));
     INT_SUFFIX.addKeyword("Mi", Parser.just(1024 * 1024));
@@ -271,10 +271,10 @@ public abstract class ExpressionNode implements Renderable {
     OUTER.addKeyword(
         "IfDefined",
         (p, o) -> {
-          final var tests = new AtomicReference<List<DefinedCheckNode>>();
-          final var trueExpression = new AtomicReference<ExpressionNode>();
-          final var falseExpression = new AtomicReference<ExpressionNode>();
-          final var result =
+          final AtomicReference<List<DefinedCheckNode>> tests = new AtomicReference<>();
+          final AtomicReference<ExpressionNode> trueExpression = new AtomicReference<>();
+          final AtomicReference<ExpressionNode> falseExpression = new AtomicReference<>();
+          final Parser result =
               p.whitespace()
                   .list(tests::set, DefinedCheckNode::parse, ',')
                   .whitespace()
@@ -300,10 +300,10 @@ public abstract class ExpressionNode implements Renderable {
     OUTER.addKeyword(
         "If",
         (p, o) -> {
-          final var testExpression = new AtomicReference<ExpressionNode>();
-          final var trueExpression = new AtomicReference<ExpressionNode>();
-          final var falseExpression = new AtomicReference<ExpressionNode>();
-          final var result =
+          final AtomicReference<ExpressionNode> testExpression = new AtomicReference<>();
+          final AtomicReference<ExpressionNode> trueExpression = new AtomicReference<>();
+          final AtomicReference<ExpressionNode> falseExpression = new AtomicReference<>();
+          final Parser result =
               p.whitespace()
                   .then(ExpressionNode::parse, testExpression::set)
                   .whitespace()
@@ -329,19 +329,22 @@ public abstract class ExpressionNode implements Renderable {
     OUTER.addKeyword(
         "Switch",
         (p, o) -> {
-          final var cases = new AtomicReference<List<Pair<ExpressionNode, ExpressionNode>>>();
-          final var test = new AtomicReference<ExpressionNode>();
-          final var alternative = new AtomicReference<ExpressionNode>();
-          final var result =
+          final AtomicReference<List<Pair<ExpressionNode, ExpressionNode>>> cases =
+              new AtomicReference<>();
+          final AtomicReference<ExpressionNode> test = new AtomicReference<>();
+          final AtomicReference<ExpressionNode> alternative = new AtomicReference<>();
+          final Parser result =
               parse1(
                       parse(p.whitespace(), test::set)
                           .whitespace()
                           .list(
                               cases::set,
                               (cp, co) -> {
-                                final var condition = new AtomicReference<ExpressionNode>();
-                                final var value = new AtomicReference<ExpressionNode>();
-                                final var cresult =
+                                final AtomicReference<ExpressionNode> condition =
+                                    new AtomicReference<>();
+                                final AtomicReference<ExpressionNode> value =
+                                    new AtomicReference<>();
+                                final Parser cresult =
                                     parse(
                                         parse(
                                                 cp.whitespace().keyword("When").whitespace(),
@@ -370,10 +373,10 @@ public abstract class ExpressionNode implements Renderable {
     OUTER.addKeyword(
         "Match",
         (p, o) -> {
-          final var cases = new AtomicReference<List<MatchBranchNode>>();
-          final var test = new AtomicReference<ExpressionNode>();
-          final var alternative = new AtomicReference<MatchAlternativeNode>();
-          final var result =
+          final AtomicReference<List<MatchBranchNode>> cases = new AtomicReference<>();
+          final AtomicReference<ExpressionNode> test = new AtomicReference<>();
+          final AtomicReference<MatchAlternativeNode> alternative = new AtomicReference<>();
+          final Parser result =
               parse(p.whitespace(), test::set)
                   .whitespace()
                   .list(cases::set, MatchBranchNode::parse)
@@ -390,11 +393,11 @@ public abstract class ExpressionNode implements Renderable {
     OUTER.addKeyword(
         "For",
         (p, o) -> {
-          final var name = new AtomicReference<DestructuredArgumentNode>();
-          final var source = new AtomicReference<SourceNode>();
-          final var transforms = new AtomicReference<List<ListNode>>();
-          final var collector = new AtomicReference<CollectNode>();
-          final var result =
+          final AtomicReference<DestructuredArgumentNode> name = new AtomicReference<>();
+          final AtomicReference<SourceNode> source = new AtomicReference<>();
+          final AtomicReference<List<ListNode>> transforms = new AtomicReference<>();
+          final AtomicReference<CollectNode> collector = new AtomicReference<>();
+          final Parser result =
               p.whitespace()
                   .then(DestructuredArgumentNode::parse, name::set)
                   .whitespace()
@@ -420,17 +423,18 @@ public abstract class ExpressionNode implements Renderable {
     OUTER.addKeyword(
         "Begin",
         (p, o) -> {
-          final var definitions =
-              new AtomicReference<List<Pair<DestructuredArgumentNode, ExpressionNode>>>();
-          final var expression = new AtomicReference<ExpressionNode>();
-          final var result =
+          final AtomicReference<List<Pair<DestructuredArgumentNode, ExpressionNode>>> definitions =
+              new AtomicReference<>();
+          final AtomicReference<ExpressionNode> expression = new AtomicReference<>();
+          final Parser result =
               p.whitespace()
                   .list(
                       definitions::set,
                       (defp, defo) -> {
-                        final var name = new AtomicReference<DestructuredArgumentNode>();
-                        final var expr = new AtomicReference<ExpressionNode>();
-                        final var defResult =
+                        final AtomicReference<DestructuredArgumentNode> name =
+                            new AtomicReference<>();
+                        final AtomicReference<ExpressionNode> expr = new AtomicReference<>();
+                        final Parser defResult =
                             defp.whitespace()
                                 .then(DestructuredArgumentNode::parse, name::set)
                                 .whitespace()
@@ -462,16 +466,17 @@ public abstract class ExpressionNode implements Renderable {
     OUTER.addKeyword(
         "Tabulate",
         (p, o) -> {
-          final var definitions =
-              new AtomicReference<List<Pair<DestructuredArgumentNode, List<ExpressionNode>>>>();
-          final var result =
+          final AtomicReference<List<Pair<DestructuredArgumentNode, List<ExpressionNode>>>>
+              definitions = new AtomicReference<>();
+          final Parser result =
               p.whitespace()
                   .list(
                       definitions::set,
                       (defp, defo) -> {
-                        final var name = new AtomicReference<DestructuredArgumentNode>();
-                        final var expr = new AtomicReference<List<ExpressionNode>>();
-                        final var defResult =
+                        final AtomicReference<DestructuredArgumentNode> name =
+                            new AtomicReference<>();
+                        final AtomicReference<List<ExpressionNode>> expr = new AtomicReference<>();
+                        final Parser defResult =
                             defp.whitespace()
                                 .then(DestructuredArgumentNode::parse, name::set)
                                 .whitespace()
@@ -497,8 +502,8 @@ public abstract class ExpressionNode implements Renderable {
     TERMINAL.addKeyword(
         "Order",
         (p, o) -> {
-          final var expr = new AtomicReference<ExpressionNode>();
-          final var result = p.whitespace().then(ExpressionNode::parse1, expr::set).whitespace();
+          final AtomicReference<ExpressionNode> expr = new AtomicReference<>();
+          final Parser result = p.whitespace().then(ExpressionNode::parse1, expr::set).whitespace();
           if (result.isGood()) {
             o.accept(new ExpressionNodeOrder(p.line(), p.column(), expr.get()));
           }
@@ -515,12 +520,12 @@ public abstract class ExpressionNode implements Renderable {
     LOGICAL_CONJUNCTION.addSymbol(
         "&&", binaryOperators("&&", BinaryOperation.shortCircuit(GeneratorAdapter.EQ)));
 
-    for (final var comparison : Comparison.values()) {
+    for (final Comparison comparison : Comparison.values()) {
       COMPARISON.addSymbol(
           comparison.symbol(),
           (p, o) -> {
-            final var right = new AtomicReference<ExpressionNode>();
-            final var result = parse4(p.whitespace(), right::set).whitespace();
+            final AtomicReference<ExpressionNode> right = new AtomicReference<>();
+            final Parser result = parse4(p.whitespace(), right::set).whitespace();
             if (result.isGood()) {
 
               o.accept(
@@ -534,8 +539,8 @@ public abstract class ExpressionNode implements Renderable {
     COMPARISON.addSymbol(
         "=~",
         (p, o) -> {
-          final var regex = new AtomicReference<Pair<String, Integer>>();
-          final var result =
+          final AtomicReference<Pair<String, Integer>> regex = new AtomicReference<>();
+          final Parser result =
               p.whitespace().regex(REGEX, regexParser(regex), "Regular expression.").whitespace();
           if (result.isGood()) {
             o.accept(
@@ -548,8 +553,8 @@ public abstract class ExpressionNode implements Renderable {
     COMPARISON.addSymbol(
         "~",
         (p, o) -> {
-          final var regex = new AtomicReference<Pair<String, Integer>>();
-          final var result =
+          final AtomicReference<Pair<String, Integer>> regex = new AtomicReference<>();
+          final Parser result =
               p.whitespace().regex(REGEX, regexParser(regex), "Regular expression.").whitespace();
           if (result.isGood()) {
             o.accept(
@@ -562,8 +567,8 @@ public abstract class ExpressionNode implements Renderable {
     COMPARISON.addSymbol(
         "!~",
         (p, o) -> {
-          final var regex = new AtomicReference<Pair<String, Integer>>();
-          final var result =
+          final AtomicReference<Pair<String, Integer>> regex = new AtomicReference<>();
+          final Parser result =
               p.whitespace().regex(REGEX, regexParser(regex), "Regular expression.").whitespace();
           if (result.isGood()) {
             o.accept(
@@ -635,10 +640,10 @@ public abstract class ExpressionNode implements Renderable {
     SUFFIX_LOOSE.addKeyword(
         "In",
         (p, o) -> {
-          final var collection = new AtomicReference<ExpressionNode>();
-          final var result = parse7(p.whitespace(), collection::set);
+          final AtomicReference<ExpressionNode> collection = new AtomicReference<>();
+          final Parser result = parse7(p.whitespace(), collection::set);
           if (result.isGood()) {
-            final var c = collection.get();
+            final ExpressionNode c = collection.get();
             o.accept(node -> new ExpressionNodeContains(p.line(), p.column(), node, c));
           }
           return result;
@@ -646,10 +651,10 @@ public abstract class ExpressionNode implements Renderable {
     SUFFIX_LOOSE.addKeyword(
         "As",
         (p, o) -> {
-          final var typeNode = new AtomicReference<ImyhatNode>();
-          final var result = p.whitespace().then(ImyhatNode::parse, typeNode::set).whitespace();
+          final AtomicReference<ImyhatNode> typeNode = new AtomicReference<>();
+          final Parser result = p.whitespace().then(ImyhatNode::parse, typeNode::set).whitespace();
           if (result.isGood()) {
-            final var type = typeNode.get();
+            final ImyhatNode type = typeNode.get();
             o.accept(node -> new ExpressionNodeJsonConvert(p.line(), p.column(), node, type));
           }
           return result;
@@ -663,16 +668,16 @@ public abstract class ExpressionNode implements Renderable {
     SUFFIX_TIGHT.addSymbol(
         "[",
         (p, o) -> {
-          final var index = new AtomicLong();
-          final var result =
+          final AtomicLong index = new AtomicLong();
+          final Parser result =
               p.whitespace().integer(index::set, 10).whitespace().symbol("]").whitespace();
           if (result.isGood()) {
-            final var i = (int) index.get();
+            final int i = (int) index.get();
             o.accept(node -> new ExpressionNodeTupleGet(p.line(), p.column(), node, i));
             return result;
           } else {
-            final var indexExpression = new AtomicReference<ExpressionNode>();
-            final var mapResult =
+            final AtomicReference<ExpressionNode> indexExpression = new AtomicReference<>();
+            final Parser mapResult =
                 p.whitespace()
                     .then(ExpressionNode::parse, indexExpression::set)
                     .whitespace()
@@ -690,13 +695,12 @@ public abstract class ExpressionNode implements Renderable {
     SUFFIX_TIGHT.addSymbol(
         ".",
         (p, o) -> {
-          final var swizzleParser = p.whitespace().symbol("{");
+          final Parser swizzleParser = p.whitespace().symbol("{");
           if (swizzleParser.isGood()) {
-            final var fields = new AtomicReference<List<String>>();
-            final var swizzleResult =
+            final AtomicReference<List<String>> fields = new AtomicReference<>();
+            final Parser swizzleResult =
                 swizzleParser
-                    .<String>list(
-                        fields::set, (fp, fo) -> fp.whitespace().identifier(fo).whitespace(), ',')
+                    .list(fields::set, (fp, fo) -> fp.whitespace().identifier(fo).whitespace(), ',')
                     .symbol("}")
                     .whitespace();
             if (swizzleParser.isGood()) {
@@ -704,8 +708,8 @@ public abstract class ExpressionNode implements Renderable {
             }
             return swizzleResult;
           }
-          final var index = new AtomicReference<String>();
-          final var result = p.whitespace().identifier(index::set).whitespace();
+          final AtomicReference<String> index = new AtomicReference<>();
+          final Parser result = p.whitespace().identifier(index::set).whitespace();
           if (result.isGood()) {
             o.accept(node -> new ExpressionNodeObjectGet(p.line(), p.column(), node, index.get()));
           }
@@ -774,8 +778,8 @@ public abstract class ExpressionNode implements Renderable {
     TERMINAL.addKeyword(
         "Dict",
         (p, o) -> {
-          final var fields = new AtomicReference<List<DictionaryElementNode>>();
-          final var result =
+          final AtomicReference<List<DictionaryElementNode>> fields = new AtomicReference<>();
+          final Parser result =
               p.whitespace()
                   .symbol("{")
                   .list(fields::set, DictionaryElementNode::parse, ',')
@@ -791,8 +795,8 @@ public abstract class ExpressionNode implements Renderable {
     TERMINAL.addSymbol(
         "[",
         (p, o) -> {
-          final var items = new AtomicReference<List<ExpressionNode>>();
-          final var result =
+          final AtomicReference<List<ExpressionNode>> items = new AtomicReference<>();
+          final Parser result =
               p.whitespace()
                   .listEmpty(items::set, (cp, co) -> parse(cp.whitespace(), co).whitespace(), ',')
                   .whitespace()
@@ -806,8 +810,8 @@ public abstract class ExpressionNode implements Renderable {
     TERMINAL.addSymbol(
         "\"",
         (p, o) -> {
-          final var items = new AtomicReference<List<StringNode>>();
-          final var result = p.list(items::set, StringNode::parse).symbol("\"").whitespace();
+          final AtomicReference<List<StringNode>> items = new AtomicReference<>();
+          final Parser result = p.list(items::set, StringNode::parse).symbol("\"").whitespace();
           if (p.isGood()) {
             o.accept(new ExpressionNodeString(p.line(), p.column(), items.get()));
           }
@@ -816,8 +820,8 @@ public abstract class ExpressionNode implements Renderable {
     TERMINAL.addSymbol(
         "'",
         (p, o) -> {
-          final var path = new AtomicReference<List<String>>();
-          final var result =
+          final AtomicReference<List<String>> path = new AtomicReference<>();
+          final Parser result =
               p.list(path::set, (ip, io) -> ip.dispatch(PATH, io)).symbol("'").whitespace();
           if (p.isGood()) {
             o.accept(
@@ -828,8 +832,8 @@ public abstract class ExpressionNode implements Renderable {
     TERMINAL.addSymbol(
         "`",
         (p, o) -> {
-          final var value = new AtomicReference<ExpressionNode>();
-          final var result =
+          final AtomicReference<ExpressionNode> value = new AtomicReference<>();
+          final Parser result =
               p.whitespace()
                   .then(ExpressionNode::parse, value::set)
                   .whitespace()
@@ -838,7 +842,7 @@ public abstract class ExpressionNode implements Renderable {
           if (p.isGood()) {
             o.accept(new ExpressionNodeOptionalOf(p.line(), p.column(), value.get()));
           }
-          final var emptyResult = p.whitespace().symbol("`").whitespace();
+          final Parser emptyResult = p.whitespace().symbol("`").whitespace();
           if (emptyResult.isGood()) {
             o.accept(new ExpressionNodeOptionalEmpty(p.line(), p.column()));
             return emptyResult;
@@ -848,8 +852,8 @@ public abstract class ExpressionNode implements Renderable {
     TERMINAL.addSymbol(
         "(",
         (p, o) -> {
-          final var expression = new AtomicReference<ExpressionNode>();
-          final var result =
+          final AtomicReference<ExpressionNode> expression = new AtomicReference<>();
+          final Parser result =
               parse(p.whitespace(), expression::set).whitespace().symbol(")").whitespace();
           if (result.isGood()) {
             o.accept(expression.get());
@@ -859,8 +863,8 @@ public abstract class ExpressionNode implements Renderable {
     TERMINAL.addRaw(
         "floating-point number",
         (p, o) -> {
-          final var value = new AtomicReference<Double>();
-          final var result =
+          final AtomicReference<Double> value = new AtomicReference<>();
+          final Parser result =
               p.regex(
                       DOUBLE_PATTERN,
                       m -> value.set(Double.parseDouble(m.group(0))),
@@ -874,9 +878,9 @@ public abstract class ExpressionNode implements Renderable {
     TERMINAL.addRaw(
         "integer",
         (p, o) -> {
-          final var value = new AtomicLong();
-          final var multiplier = new AtomicInteger();
-          final var result =
+          final AtomicLong value = new AtomicLong();
+          final AtomicInteger multiplier = new AtomicInteger();
+          final Parser result =
               p.integer(value::set, 10).dispatch(INT_SUFFIX, multiplier::set).whitespace();
           if (result.isGood()) {
             o.accept(
@@ -905,8 +909,8 @@ public abstract class ExpressionNode implements Renderable {
     TERMINAL.addRaw(
         "function call, variable, algebraic value",
         (p, o) -> {
-          final var name = new AtomicReference<String>();
-          final var algebraicResult = p.algebraicIdentifier(name::set).whitespace();
+          final AtomicReference<String> name = new AtomicReference<>();
+          final Parser algebraicResult = p.algebraicIdentifier(name::set).whitespace();
           if (algebraicResult.isGood()) {
             if (algebraicResult.lookAhead('{')) {
               return parseTupleOrObject(
@@ -922,10 +926,10 @@ public abstract class ExpressionNode implements Renderable {
             return algebraicResult;
           }
 
-          var result = p.qualifiedIdentifier(name::set);
+          Parser result = p.qualifiedIdentifier(name::set);
           if (result.isGood()) {
             if (result.lookAhead('(')) {
-              final var items = new AtomicReference<List<ExpressionNode>>();
+              final AtomicReference<List<ExpressionNode>> items = new AtomicReference<>();
               result =
                   result
                       .symbol("(")
@@ -960,18 +964,18 @@ public abstract class ExpressionNode implements Renderable {
       Function<String, ExpressionNode> gangConstructor,
       Function<List<ObjectElementNode>, ExpressionNode> objectConstructor,
       Function<List<TupleElementNode>, ExpressionNode> tupleConstructor) {
-    final var gangParser = parser.whitespace().symbol("@");
+    final Parser gangParser = parser.whitespace().symbol("@");
     if (gangParser.isGood()) {
-      final var name = new AtomicReference<String>();
-      final var gangResult =
+      final AtomicReference<String> name = new AtomicReference<>();
+      final Parser gangResult =
           gangParser.whitespace().identifier(name::set).whitespace().symbol("}").whitespace();
       if (gangResult.isGood()) {
         output.accept(gangConstructor.apply(name.get()));
       }
       return gangResult;
     }
-    final var fields = new AtomicReference<List<ObjectElementNode>>();
-    var objectResult =
+    final AtomicReference<List<ObjectElementNode>> fields = new AtomicReference<>();
+    Parser objectResult =
         parser.whitespace().listEmpty(fields::set, ObjectElementNode::parse, ',').whitespace();
     if (objectResult.symbol(";").isGood()) {
       objectResult =
@@ -980,7 +984,7 @@ public abstract class ExpressionNode implements Renderable {
               .<ObjectElementNode>list(
                   fields.get()::addAll,
                   (cfp, cfo) -> {
-                    final var cgp = cfp.whitespace().symbol("@");
+                    final Parser cgp = cfp.whitespace().symbol("@");
                     if (cgp.isGood()) {
                       return cgp.whitespace()
                           .identifier(
@@ -1007,8 +1011,8 @@ public abstract class ExpressionNode implements Renderable {
       return objectResult;
     }
 
-    final var items = new AtomicReference<List<TupleElementNode>>();
-    final var result =
+    final AtomicReference<List<TupleElementNode>> items = new AtomicReference<>();
+    final Parser result =
         parser
             .whitespace()
             .list(items::set, TupleElementNode::parse, ',')
@@ -1023,7 +1027,7 @@ public abstract class ExpressionNode implements Renderable {
 
   public static Consumer<Matcher> regexParser(AtomicReference<Pair<String, Integer>> regex) {
     return m -> {
-      var flags = 0;
+      int flags = 0;
 
       if (m.group(2).contains("i")) {
         flags |= Pattern.CASE_INSENSITIVE;
